Issue #342 : switch logo in dark mode

--- a/src/app/pages/about/about.page.scss
+++ b/src/app/pages/about/about.page.scss
@@ -7,10 +7,11 @@
     max-width: 150px;
     margin: 0 1em;
 
-    ion-img {
+    .epoc-logo {
       display: block;
       width: 100%;
-      height: auto;
+      height: 100%;
+      background: var(--epoc-logo) no-repeat;
     }
   }
 }
